[gd_scene load_steps=16 format=3 uid="uid://vwe4gklch4fh"]

[ext_resource type="Script" path="res://scripts/platform_player.gd" id="1_p865q"]
[ext_resource type="Texture2D" uid="uid://c1745hvead1qt" path="res://assets/player-idle.png" id="2_ovq0q"]
[ext_resource type="Texture2D" uid="uid://duk3ewpxk243g" path="res://assets/player-run.png" id="3_k4tbh"]
[ext_resource type="PackedScene" uid="uid://0rg0wy64v8m" path="res://scenes/global/interaction_icon.tscn" id="5_wprqc"]
[ext_resource type="PackedScene" uid="uid://dil68rhg1rbv5" path="res://scenes/global/static_dialogue.tscn" id="6_rcddw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gsovc"]
atlas = ExtResource("2_ovq0q")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tafj2"]
atlas = ExtResource("2_ovq0q")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sufo"]
atlas = ExtResource("3_k4tbh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn50a"]
atlas = ExtResource("3_k4tbh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_elcd2"]
atlas = ExtResource("3_k4tbh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5h4w"]
atlas = ExtResource("3_k4tbh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bd64m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsovc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tafj2")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sufo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn50a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elcd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5h4w")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4en06"]
radius = 4.0
height = 14.0

[sub_resource type="Gradient" id="Gradient_3c75o"]
colors = PackedColorArray(0.863286, 2.69532e-06, 0.527448, 1, 0.863286, 2.69532e-06, 0.527448, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2tqjw"]
gradient = SubResource("Gradient_3c75o")
width = 8
height = 8

[node name="Player" type="CharacterBody2D"]
z_index = 2
y_sort_enabled = true
collision_mask = 7
platform_on_leave = 1
script = ExtResource("1_p865q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_bd64m")
animation = &"run"
autoplay = "idle"
frame_progress = 0.930708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_4en06")

[node name="CameraTarget" type="RemoteTransform2D" parent="."]
visible = false
remote_path = NodePath("../Camera2D")
update_rotation = false
update_scale = false

[node name="Sprite2D" type="Sprite2D" parent="CameraTarget"]
texture = SubResource("GradientTexture2D_2tqjw")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
limit_left = 0
limit_top = 0
position_smoothing_speed = 4.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="StaticDialogue" parent="." instance=ExtResource("6_rcddw")]
offset = Vector2(48, 128)
transform = Transform2D(1, 0, 0, 1, 48, 128)

[node name="InteractionIcon" parent="." instance=ExtResource("5_wprqc")]
visible = false
position = Vector2(0, -13)
